# GrabCut

./: .gitignore  README.md
MyCode-GMM-version/: CMakeLists.txt  MyCode-main.cpp
MyCode-GMM-version/core/: MyCode-GCApplication.cpp  MyCode-GCApplication.h
MyCode-GMM-version/core/BorderMatting/: BorderMatting.cpp  BorderMatting.h
MyCode-GMM-version/core/GrabCut/: GrabCut.cpp  GrabCut.h
MyCode-GMM-version/core/GrabCut/GMM/: GMM.cpp  GMM.h
MyCode-GMM-version/core/GrabCut/maxflow/: block.h  graph.cpp  graph.h  maxflow.cpp
OpenCV-version/: CMakeLists.txt  OpenCV-main.cpp
OpenCV-version/core/: OpenCV-GCApplication.cpp  OpenCV-GCApplication.h
